# coding-agent

./: .gitignore  QUICKSTART.md  agent.config.example.yaml  cli_entry.py  install.sh  pyproject.toml
scripts/: install-dev.sh  run-local.sh
src/: __init__.py  coding_agent_cli.py
src/agent/: __init__.py  approvals.py  config.py  core.py  executor.py  retriever.py  state.py  verifier.py
src/llm/: __init__.py  client.py  schemas.py
src/tools/: __init__.py  deps.py  fs.py  git.py  shell.py
src/ui/: cli.py
